--- a/product.html
+++ b/product.html
@@ -22,19 +22,19 @@
     <div class="limitedWidthBlockContainer informations">
       <div class="limitedWidthBlock">
         <ul>
-          <li><img src="../images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89
+          <li><img src="./images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89
           </li>
-          <li><img src="../images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com
+          <li><img src="./images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com
           </li>
-          <li><img src="../images/icons/adress.svg" alt="logo d'un point de géolocalisation"
+          <li><img src="./images/icons/adress.svg" alt="logo d'un point de géolocalisation"
               class="informations__address">01 23 45 67 89</li>
         </ul>
       </div>
     </div>
     <div class="limitedWidthBlockContainer menu">
       <div class="limitedWidthBlock">
-        <a href="./index.html">
-          <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
+        <a href="index.html">
+          <img class="logo" src="./images/logo.png" alt="Logo de l'entreprise">
         </a>
         <nav>
           <ul>
@@ -48,7 +48,7 @@
         </nav>
       </div>
     </div>
-    <img class="banniere" src="../images/banniere.png" alt="Baniere">
+    <img class="banniere" src="./images/banniere.png" alt="Baniere">
   </header>
 
   <main class="limitedWidthBlockContainer">
@@ -106,7 +106,7 @@
     <div class="limitedWidthBlockContainer footerMain">
       <div class="limitedWidthBlock">
         <div>
-          <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
+          <img class="logo" src="./images/logo.png" alt="Logo de l'entreprise">
         </div>
         <div>
           <p>10 quai de la charente <br>75019 Paris 19</p>
@@ -125,7 +125,7 @@
       </div>
     </div>
   </footer>
-  <script src="../js/product.js"></script>
+  <script src="./js/product.js"></script>
 </body>
 
 </html>
