--- a/confirmation.html
+++ b/confirmation.html
@@ -34,7 +34,7 @@
     <div class="limitedWidthBlockContainer menu">
       <div class="limitedWidthBlock">
         <a href="index.html">
-          <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
+          <img class="logo" src="./images/logo.png" alt="Logo de l'entreprise">
         </a>
         <nav>
           <ul>
@@ -82,11 +82,11 @@
     </div>
     <div class="limitedWidthBlockContainer footerSecondary">
       <div class="limitedWidthBlock">
-        <p>© Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All Rights Reserved | Powered by <3< /p>
+        <p>© Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All Rights Reserved </p>
       </div>
     </div>
   </footer>
-  <script src="./js/cart.js"></script>
+  <script src="./js/order.js"></script>
 </body>
 
 </html>
