--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section class="items" id="items">
         <!--           <a href="./product.html?id=42">
             <article>
-              <img src=".../product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
+              <img src="../product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
               <h3 class="productName">Kanap name1</h3>
               <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
             </article>
@@ -88,11 +88,12 @@
     </div>
     <div class="limitedWidthBlockContainer footerSecondary">
       <div class="limitedWidthBlock">
-        <p>© Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All Rights Reserved | Powered by <3< /p>
+        <p>© Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All Rights Reserved </p>
       </div>
     </div>
   </footer>
-  <script src="./js/script.js"></script>
+  <script src="./js/error.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
