--- a/product.html
+++ b/product.html
@@ -56,7 +56,8 @@
       <section class="item">
         <article>
           <div class="item__img">
-            <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
+
+            <!-- <img src="./images/logo.png" alt="Photographie d'un canapé"> -->
           </div>
           <div class="item__content">
 
@@ -125,6 +126,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/error.js"></script>
   <script src="./js/product.js"></script>
 </body>
 
